search type page add

--- a/app/blocks/offer-table/offer-table.pug
+++ b/app/blocks/offer-table/offer-table.pug
@@ -8,5 +8,5 @@ mixin offer-table(data)
               +nd-box()(class=item.box + ' __box')
               +e.name!=item.name
           +e.TD.cell
-            +e.price!=item.price
+            +e.price <span>from</span>&nbsp;#{item.price}
     block
