--- a/app/blocks/pagination/pagination.pug
+++ b/app/blocks/pagination/pagination.pug
@@ -16,3 +16,22 @@ mixin pagination()
     +e.LI.item
       +e.A.arrow_next(href="#")
         +icon('arrow2').icon
+
+mixin nd-pagination()
+  +b.UL.nd-pagination&attributes(attributes)
+    +e.LI.item
+      +e.A.arrow_prev(href="#") Previous
+        +icon('nd-slider-arrow')
+    +e.LI.item
+      +e.A.link.is-active(href="#") 1
+    +e.LI.item
+      +e.A.link(href="#") 2
+    +e.LI.item
+      +e.A.link(href="#") 3
+    +e.LI.item
+      +e.A.link(href="#") 4
+    +e.LI.item
+      +e.A.link(href="#") 5
+    +e.LI.item
+      +e.A.arrow_next(href="#") Next
+        +icon('nd-slider-arrow')
