--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -254,7 +254,6 @@
 
       @include screen('xlg', max, 2) {
         font-size: pxtovw(20, 1660);
-
       }
 
       @include screen('lg', max, 2) {
@@ -309,6 +308,75 @@
         @include screen('sm', max, 2) {
           margin-top: pxtovw(10, 375);
         }
+      }
+    }
+
+    #{$b}_search-card & {
+      font-size: 20px;
+      line-height: (24 / 20);
+      font-weight: 400;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(20, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(20, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(20, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(20, 375);
+      }
+
+      .is-search-map-hide & {
+        font-family: $font-main;
+        font-weight: 700;
+
+        @include screen('xlg', max, 2) {
+          font-size: pxtovw(18, 1660);
+          line-height: (22 / 18);
+        }
+
+        @include screen('lg', max, 2) {
+          font-size: pxtovw(18, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          font-size: pxtovw(18, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          font-size: pxtovw(20, 375);
+          line-height: (24 / 20);
+          font-family: $font-stolzl;
+          font-weight: 400;
+        }
+      }
+    }
+
+    #{$b}_search-offer & {
+      font-size: 18px;
+      line-height: 1.2;
+      min-height: 2.4em;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(18, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(18, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(16, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(18, 375);
       }
     }
   }
@@ -438,6 +506,8 @@
     line-height: $line-height;
     max-height: $lines * $line-height * 1em;
     text-overflow: ellipsis;
+    color: $nd-color-gray-text8;
+    font-size: 15px;
 
     @include screen('xlg', max, 2) {
       font-size: pxtovw(15, 1660);
@@ -454,6 +524,30 @@
     @include screen('sm', max, 2) {
       display: none;
       font-size: pxtovw(15, 375);
+    }
+
+    &:not(:first-child) {
+      margin-top: 11px;
+
+      @include screen('xl', max, 2) {
+        margin-top: 7px;
+      }
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(7, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(4, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(4, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(4, 375);
+      }
     }
 
     .is-search-map-hide & {
@@ -621,6 +715,29 @@
     }
   }
 
+  &__head {
+    display: block;
+    width: 100%;
+    padding: 18px 18px 0;
+    box-sizing: border-box;
+
+    @include screen('xlg', max, 2) {
+      padding: pxtovw(18, 1660) pxtovw(18, 1660) 0;
+    }
+
+    @include screen('lg', max, 2) {
+      padding: pxtovw(18, 1366) pxtovw(18, 1366) 0;
+    }
+
+    @include screen('md', max, 2) {
+      padding: pxtovw(15, 960) pxtovw(14, 960) 0;
+    }
+
+    @include screen('sm', max, 2) {
+      padding: pxtovw(15, 375) pxtovw(16, 375) 0;
+    }
+  }
+
   &_card {
     display: flex;
     flex-direction: column;
@@ -689,6 +806,31 @@
       justify-content: flex-start;
       align-items: center;
       padding: 0;
+    }
+  }
+
+  &_search-offer {
+    box-sizing: border-box;
+    display: block;
+    background-color: $nd-color-basic-light;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, .03), 2px 2px 2px rgba(0, 0, 0, .04), 3px 3px 3px rgba(0, 0, 0, .02);
+    overflow: hidden;
+
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(3, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      border-radius: pxtovw(3, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      border-radius: pxtovw(3, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      border-radius: pxtovw(3, 375);
     }
   }
 }
