--- a/app/components/search-filter/nd-search-filter.pug
+++ b/app/components/search-filter/nd-search-filter.pug
@@ -3,5 +3,6 @@ mixin nd-search-filter()
     +e.wrapper
       .nd-container
         +e.filter
+          +filter-menu
         +e.switch
           +nd-switch({type: 'twoSide', name: 'mapSwitch', value: 'mapHide', labels: {off: 'Map view', on: 'Tile view'}, inputClass: ' js-search-map-switch'})
