--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -24,3 +24,4 @@ block content
           +nd-link(href="nd-signup-ready.html") Spacepool - Sign Up - Account created (nd-signup-ready.html)
           +nd-link(href="login.html") Spacepool - Login (login.html)
           +nd-link(href="search.html") Spacepool - Search (search.html)
+          +nd-link(href="search-types.html") Spacepool - Search by offer type (search-types.html)
