--- a/app/blocks/offer-table/offer-table.scss
+++ b/app/blocks/offer-table/offer-table.scss
@@ -62,6 +62,26 @@
       width: pxtovw(8, 375);
       height: pxtovw(8, 375);
     }
+
+    &:not(:last-child) {
+      margin-right: 8px;
+
+      @include screen('xlg', max, 2) {
+        margin-right: pxtovw(8, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-right: pxtovw(8, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-right: pxtovw(5, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-right: pxtovw(7, 375);
+      }
+    }
   }
 
   &__name {
@@ -85,26 +105,6 @@
 
     @include screen('sm', max, 2) {
       font-size: pxtovw(11, 375);
-    }
-
-    &:not(:first-child) {
-      margin-left: 8px;
-
-      @include screen('xlg', max, 2) {
-        margin-left: pxtovw(8, 1660);
-      }
-
-      @include screen('lg', max, 2) {
-        margin-left: pxtovw(8, 1366);
-      }
-
-      @include screen('md', max, 2) {
-        margin-left: pxtovw(5, 960);
-      }
-
-      @include screen('sm', max, 2) {
-        margin-left: pxtovw(7, 375);
-      }
     }
   }
 
@@ -132,6 +132,253 @@
 
     @include screen('sm', max, 2) {
       font-size: pxtovw(13, 375);
+    }
+  }
+
+  &_transforma {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    @include screen('sm', max, 2) {
+      display: table;
+    }
+
+    tbody {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      width: 100%;
+
+      @include screen('sm', max, 2) {
+        display: table;
+      }
+    }
+
+    #{$b} {
+      &__row {
+        display: inline-block;
+
+        @include screen('sm', max, 2) {
+          display: table-row;
+          width: 100%;
+        }
+
+        &:not(:last-child) {
+          margin-right: 30px;
+
+          @include screen('xlg', max, 2) {
+            margin-right: pxtovw(30, 1660);
+          }
+
+          @include screen('lg', max, 2) {
+            margin-right: pxtovw(25, 1366);
+          }
+
+          @include screen('md', max, 2) {
+            margin-right: pxtovw(25, 960);
+          }
+
+          @include screen('sm', max, 2) {
+            margin-right: 0;
+          }
+        }
+      }
+
+      &__cell {
+        display: block;
+        width: auto;
+
+        @include screen('sm', max, 2) {
+          display: table-cell;
+          width: 50%;
+        }
+
+        &:last-child {
+          text-align: left;
+
+          @include screen('sm', max, 2) {
+            text-align: right;
+          }
+        }
+      }
+
+      &__offer {
+        flex-direction: column;
+        align-items: flex-start;
+
+        @include screen('sm', max, 2) {
+          flex-direction: row;
+          align-items: baseline;
+        }
+      }
+
+      &__box {
+        align-self: flex-start;
+        width: 9px;
+        height: 9px;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(9, 1660);
+          height: pxtovw(9, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          width: pxtovw(9, 1366);
+          height: pxtovw(9, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          width: pxtovw(8, 960);
+          height: pxtovw(8, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          width: pxtovw(8, 375);
+          height: pxtovw(8, 375);
+          align-self: center;
+        }
+      }
+
+      &__name {
+        white-space: nowrap;
+        font-size: 12px;
+        line-height: (15 / 12);
+
+        @include screen('xlg', max, 2) {
+          font-size: pxtovw(12, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          font-size: pxtovw(12, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          font-size: pxtovw(12, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          font-size: pxtovw(12, 375);
+        }
+      }
+
+      &__price {
+        white-space: nowrap;
+        font-size: 14px;
+        line-height: (17 / 14);
+
+        @include screen('xlg', max, 2) {
+          font-size: pxtovw(14, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          font-size: pxtovw(14, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          font-size: pxtovw(14, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          font-size: pxtovw(15, 375);
+          line-height: (18 / 15);
+
+          span {
+            display: none;
+          }
+        }
+      }
+    }
+
+    .is-search-map-hide & {
+      display: table;
+
+      tbody {
+        display: table;
+      }
+
+      #{$b} {
+        &__row {
+          display: table-row;
+          width: 100%;
+
+          &:not(:last-child) {
+            margin-right: 0;
+          }
+        }
+
+        &__cell {
+          display: table-cell;
+          width: 50%;
+
+          &:last-child {
+            text-align: right;
+          }
+        }
+
+        &__offer {
+          flex-direction: row;
+          align-items: baseline;
+        }
+
+        &__box {
+          align-self: center;
+
+          @include screen('lg', max, 2) {
+            width: pxtovw(8, 1366);
+            height: pxtovw(8, 1366);
+          }
+
+          @include screen('md', max, 2) {
+            width: pxtovw(8, 960);
+            height: pxtovw(8, 960);
+          }
+
+          @include screen('sm', max, 2) {
+            width: pxtovw(8, 375);
+            height: pxtovw(8, 375);
+          }
+        }
+
+        &__name {
+          @include screen('md', max, 2) {
+            font-size: pxtovw(11, 960);
+            line-height: (13 / 11);
+          }
+
+          @include screen('sm', max, 2) {
+            font-size: pxtovw(12, 375);
+            line-height: (15 / 12);
+          }
+        }
+
+        &__price {
+          font-size: 15px;
+          line-height: (18 / 15);
+
+          @include screen('xlg', max, 2) {
+            font-size: pxtovw(15, 1660);
+          }
+
+          @include screen('lg', max, 2) {
+            font-size: pxtovw(15, 1366);
+          }
+
+          @include screen('md', max, 2) {
+            font-size: pxtovw(13, 960);
+            line-height: (16 / 13);
+          }
+
+          @include screen('sm', max, 2) {
+            font-size: pxtovw(15, 375);
+            line-height: (18 / 15);
+          }
+
+          span {
+            display: none;
+          }
+        }
+      }
     }
   }
 }
