--- a/app/blocks/promo-slider/promo-slider.scss
+++ b/app/blocks/promo-slider/promo-slider.scss
@@ -248,8 +248,8 @@
     height: 42px;
     border-radius: 50%;
     border: 1px solid $nd-color-basic;
-    stroke: $nd-color-border-light;
-    transition: opacity $ease-main, stroke $ease-main;
+    fill: $nd-color-border-light;
+    transition: opacity $ease-main, fill $ease-main;
     cursor: pointer;
     box-sizing: border-box;
 
@@ -278,7 +278,7 @@
     }
 
     &:hover {
-      stroke: currentColor;
+      fill: currentColor;
     }
 
     &.swiper-button-disabled {
@@ -309,7 +309,7 @@
 
     svg {
       flex: none;
-      stroke: inherit;
+      fill: inherit;
       width: 9px;
       height: 20px;
       margin-left: -2px;
