--- a/app/blocks/slider/nd-slider.scss
+++ b/app/blocks/slider/nd-slider.scss
@@ -37,8 +37,8 @@
     height: 100%;
     pointer-events: auto;
     cursor: pointer;
-    stroke: $nd-color-border-light;
-    transition: stroke $ease-main, opacity $ease-main;
+    fill: $nd-color-border-light;
+    transition: fill $ease-main, opacity $ease-main;
 
     @include screen('xl', max, 2) {
       width: 60px;
@@ -61,7 +61,7 @@
     }
 
     &:hover {
-      stroke: $nd-color-basic;
+      fill: $nd-color-basic;
     }
 
     &.swiper-button-disabled {
@@ -109,7 +109,7 @@
       position: relative;
       width: 100%;
       height: 100%;
-      stroke: inherit;
+      fill: inherit;
     }
   }
 
