--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -46,11 +46,15 @@ include ../blocks/feature/feature
 include ../blocks/file-uploader/file-uploader
 include ../blocks/file/file
 include ../blocks/files-card/files-card
+include ../blocks/filter-button/filter-button
 include ../blocks/filter-dialog/filter-dialog
 include ../blocks/filter-list/filter-list
 include ../blocks/filter-name/filter-name
+include ../blocks/filter-popup/filter-popup
 include ../blocks/filter-reset/filter-reset
 include ../blocks/filter-select/filter-select
+include ../blocks/filter-tag/filter-tag
+include ../blocks/filter-tags/filter-tags
 include ../blocks/footnote-star/footnote-star
 include ../blocks/footnote/footnote
 include ../blocks/form-box/form-box
