--- a/app/pages/search/search-types.pug
+++ b/app/pages/search/search-types.pug
@@ -13,7 +13,7 @@ block header
   - var host = false
 
 block content
-  +nd-search-filter
+  +nd-search-filter(true)
   +nd-content._map
     .nd-container
       +nd-content-main
