--- a/app/blocks/gallery/gallery.scss
+++ b/app/blocks/gallery/gallery.scss
@@ -628,19 +628,7 @@
     &_small {
       display: flex;
       box-sizing: border-box;
-      padding: 0 10px;
-
-      @include screen('xlg', max, 2) {
-        padding: 0 pxtovw(10, 1660);
-      }
-
-      @include screen('lg', max, 2) {
-        padding: 0 pxtovw(10, 1366);
-      }
-
-      @include screen('md', max, 2) {
-        padding: 0 pxtovw(10, 960);
-      }
+      padding: 0;
 
       @include screen('sm', max, 2) {
         padding: 0 pxtovw(5, 375);
@@ -656,10 +644,9 @@
     height: 128px;
     pointer-events: auto;
     background-color: rgba(0, 0, 0, .3);
-    transition: background $ease-main;
+    transition: background $ease-main, fill $ease-main;
     cursor: pointer;
-    fill: none;
-    stroke: $nd-color-gray;
+    fill: $nd-color-gray;
     transform-origin: 50% 50%;
 
     @include screen('xlg', max, 2) {
@@ -727,7 +714,7 @@
       width: 30px;
       height: 40px;
       background-color: transparent;
-      stroke: rgba($nd-color-border4, .7);
+      fill: $nd-color-border4;
 
       @include screen('xlg', max, 2) {
         width: pxtovw(30, 1660);
@@ -751,27 +738,27 @@
 
       &:hover {
         background-color: transparent;
-        stroke: $nd-color-border4;
+        fill: $nd-color-border4;
       }
 
       svg {
         filter: drop-shadow(0 1px 0 rgba(0, 0, 0, .46));
-        width: 13px;
-        height: 38px;
+        width: 11px;
+        height: 25px;
 
         @include screen('xlg', max, 2) {
-          width: pxtovw(13, 1660);
-          height: pxtovw(38, 1660);
+          width: pxtovw(11, 1660);
+          height: pxtovw(25, 1660);
         }
 
         @include screen('lg', max, 2) {
-          width: pxtovw(13, 1366);
-          height: pxtovw(38, 1366);
+          width: pxtovw(9, 1366);
+          height: pxtovw(21, 1366);
         }
 
         @include screen('md', max, 2) {
-          width: pxtovw(13, 960);
-          height: pxtovw(38, 960);
+          width: pxtovw(9, 960);
+          height: pxtovw(21, 960);
         }
 
         @include screen('sm', max, 2) {
