--- a/app/blocks/offer-table/offer-table.scss
+++ b/app/blocks/offer-table/offer-table.scss
@@ -165,10 +165,10 @@
         }
 
         &:not(:last-child) {
-          margin-right: 30px;
+          margin-right: 25px;
 
           @include screen('xlg', max, 2) {
-            margin-right: pxtovw(30, 1660);
+            margin-right: pxtovw(25, 1660);
           }
 
           @include screen('lg', max, 2) {
@@ -176,7 +176,7 @@
           }
 
           @include screen('md', max, 2) {
-            margin-right: pxtovw(25, 960);
+            margin-right: pxtovw(27, 960);
           }
 
           @include screen('sm', max, 2) {
@@ -192,12 +192,15 @@
         @include screen('sm', max, 2) {
           display: table-cell;
           width: 50%;
+          padding: pxtovw(5, 375) 0 pxtovw(6, 375);
         }
 
         &:last-child {
           text-align: left;
+          padding-top: 0;
 
           @include screen('sm', max, 2) {
+            padding-top: pxtovw(5, 375);
             text-align: right;
           }
         }
@@ -217,25 +220,30 @@
         align-self: flex-start;
         width: 9px;
         height: 9px;
+        margin-bottom: 4px;
 
         @include screen('xlg', max, 2) {
           width: pxtovw(9, 1660);
           height: pxtovw(9, 1660);
+          margin-bottom: pxtovw(4, 1660);
         }
 
         @include screen('lg', max, 2) {
           width: pxtovw(9, 1366);
           height: pxtovw(9, 1366);
+          margin-bottom: pxtovw(4, 1366);
         }
 
         @include screen('md', max, 2) {
-          width: pxtovw(8, 960);
-          height: pxtovw(8, 960);
+          width: pxtovw(9, 960);
+          height: pxtovw(9, 960);
+          margin-bottom: pxtovw(4, 960);
         }
 
         @include screen('sm', max, 2) {
           width: pxtovw(8, 375);
           height: pxtovw(8, 375);
+          margin-bottom: 0;
           align-self: center;
         }
       }
@@ -312,7 +320,24 @@
           width: 50%;
 
           &:last-child {
+            padding-top: 6px;
             text-align: right;
+
+            @include screen('xlg', max, 2) {
+              padding-top: pxtovw(6, 1660);
+            }
+
+            @include screen('lg', max, 2) {
+              padding-top: pxtovw(6, 1366);
+            }
+
+            @include screen('md', max, 2) {
+              padding-top: pxtovw(6, 960);
+            }
+
+            @include screen('sm', max, 2) {
+              padding-top: pxtovw(5, 375);
+            }
           }
         }
 
@@ -323,10 +348,11 @@
 
         &__box {
           align-self: center;
+          margin-bottom: 0;
 
           @include screen('lg', max, 2) {
-            width: pxtovw(8, 1366);
-            height: pxtovw(8, 1366);
+            width: pxtovw(9, 1366);
+            height: pxtovw(9, 1366);
           }
 
           @include screen('md', max, 2) {
