--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -41,6 +41,14 @@
     min-height: pxtovw(40, 375);
   }
 
+  &_sm-h50 {
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(17, 375);
+      padding: pxtovw(14, 375) pxtovw(11, 375) pxtovw(8, 375);
+      min-height: pxtovw(50, 375);
+    }
+  }
+
   &_h40 {
     padding: 9px 11px 3px;
     min-height: 40px;
