--- a/app/pages/ui-kit/nd-ui-kit.pug
+++ b/app/pages/ui-kit/nd-ui-kit.pug
@@ -178,6 +178,16 @@ block content
             +radio-button({name: 'radio2', value: 'radio1', checked: false}) .radio-button no checked
           li
             +radio-button({name: 'radio2', value: 'radio2', checked: true}) .radio-button checked
+          li
+            +check-button({name: 'checkbtn', value: 'check1', checked: false, type: 'checkbox'}) .check-button checkbox
+          li
+            +check-button({name: 'checkbtn', value: 'check2', checked: true, type: 'checkbox'}) .check-button checkbox checked
+          li
+            +check-button({name: 'checkbtn2', value: 'check1', checked: false, type: 'radio'})._h34 .check-button_h34 radio
+          li
+            +check-button({name: 'checkbtn2', value: 'check2', checked: true, type: 'radio'})._h34 .check-button_h34 radio checked
+          li
+            +nd-range({output: {minLabel: 'Min', maxLabel: 'Max', max: 'max', min: 'min'}})(data-start="[0, 5000]" data-connect="[false, true, false]" data-step="10" data-margin="30" data-min="0" data-max="10000" data-currency="£")
 
     //- Хлебные крошки
     +ui-section
