--- a/app/components/filter-menu/filter-menu.pug
+++ b/app/components/filter-menu/filter-menu.pug
@@ -2,7 +2,7 @@ mixin filter-menu(specific)
   +b.FORM.filter-menu&attributes(attributes)
     +e.item_location.nd-hide-sm
       +filter-button({class: 'js-nd-show-block-filter', name: 'London', filterName: 'location'})
-      +e.popup(data-filter-block-place="location")
+      +filter-popup({submit: 'Save', reset: 'clear', title: 'Location'}).__popup(data-filter-block-place="location")
     +e.item_tags
       +filter-tags
     +e.item_type
@@ -10,16 +10,14 @@ mixin filter-menu(specific)
         +filter-button({class: '_offer is-types-hd js-nd-show-filter', name: 'All offers', currentName: 'Hot desk', filterName: 'offerType'})
       else
         +filter-button({class: '_offer is-types-all js-nd-show-filter', name: 'All offers', filterName: 'offerType'})
-      +e.popup(data-filter-popup="offerType")
-        +filter-popup
+      +filter-popup({submit: 'Show all offers', reset: 'clear', title: 'Offer type', offerType: true}).__popup(data-filter-popup="offerType")
     +e.item_team.nd-hide-sm
       +filter-button({class: 'js-nd-show-block-filter', name: 'Team', filterName: 'team'})
-      +e.popup(data-filter-block-place="team")
+      +filter-popup({submit: 'Save', reset: 'clear', title: 'Team'}).__popup(data-filter-block-place="team")
     +e.item_price.nd-hide-sm
       +filter-button({class: 'js-nd-show-block-filter', name: 'Price range', filterName: 'priceRange'})
-      +e.popup(data-filter-block-place="priceRange")
+      +filter-popup({submit: 'Save', reset: 'clear', title: 'Price Range'}).__popup(data-filter-block-place="priceRange")
     +e.item_all.nd-hide-from-sm
       +filter-button({class: '_all js-nd-show-filter', name: 'Filter', filterName: 'filter'})
-      +e.popup(data-filter-popup="filter")
-        +filter-popup
+      +filter-popup({submit: 'Show results - 89', reset: 'clear', title: 'Filter'}).__popup(data-filter-popup="filter")
     block
